# log4c

./: .cvsignore  AUTHORS  ChangeLog  Makefile.am  README  TODO  bootstrap  configure.in  log4c-config.in  log4c.m4  log4c.spec.in  log4crc.in  release
config/: .cvsignore  configure-solaris.patch  expat.m4
doc/: Doxyfile.in  Log4C-DevelopersGuide.html  Log4C-DevelopersGuide.odt  Makefile.am  log4cHowto.html  main.doc.in
examples/: Makefile.am  README  application_1.c  application_2.c  application_3.h  example_appenders.c  example_formatters.c  log4crc  log4crc.in  userloc_formatter.c
examples/helloworld/: Makefile.am
examples/helloworld1/: Makefile.am  mylog.h
macosx/: Info.plist
macosx/English.lproj/: InfoPlist.strings
macosx/log4c.xcode/: project.pbxproj
macosx/log4c.xcodeproj/: project.pbxproj
msvc6/: Makefile  README  gotest.sh
msvc6/log4c/: version.h
src/: .cvsignore  log4c.h
src/log4c/: Makefile.am  appender.c  appender.h  appender_type_mmap.c  appender_type_mmap.h  appender_type_rollingfile.c  appender_type_stream.c  appender_type_stream.h  appender_type_stream2.c  appender_type_stream2.h  appender_type_syslog.c  appender_type_syslog.h  category.c  category.h  config-win32.h  create_cpp_tester.sh  defs.h  init.c  init.h  layout.c  layout.h  layout_type_basic.c  layout_type_basic.h  layout_type_basic_r.c  layout_type_dated.c  layout_type_dated.h  layout_type_dated_r.c  location_info.h  logging_event.c  logging_event.h  priority.c  priority.h  rc.c  rc.h  rollingpolicy.c  rollingpolicy.h  rollingpolicy_type_sizewin.c  version.c  version.h.in
src/sd/: Makefile.am  defs.h  domnode-xml-parser.c  domnode-xml-scanner.c  domnode-xml-scanner.h  domnode-xml-scanner.l  domnode-xml.c  domnode-xml.h  domnode.c  domnode.h  error.c  error.h  factory.c  factory.h  hash.c  hash.h  list.c  list.h  malloc.c  malloc.h  sd_xplatform.c  sd_xplatform.h  sprintf.c  sprintf.h  sprintf.osf.c  stack.h  store.c  store.h  sync  test.c  test.h
tests/: .cvsignore  Makefile.am
tests/log4c/: Makefile.am  appender_test.c  bench.c  bench_fwrite.c  layout_test.c  test_category.c  test_category.ref  test_layout_r.c  test_rc.c  test_rc.in  test_rollingfile_appender_mt.c  test_stream2.c
