INCLUDES = \
        -I$(top_srcdir)/src

noinst_LTLIBRARIES  = liblog4c_sd.la

liblog4c_sd_la_SOURCES = \
        error.h \
        defs.h \
        stack.h \
        stack.c \
        list.h \
        list.c \
        malloc.h \
        malloc.c \
        domnode.h \
        domnode-xml.h \
        domnode-xml.c \
        domnode-xml-parser.h \
	domnode-xml-parser.c \
        domnode-xml-scanner.h \
        domnode-xml-scanner.c \
        domnode.c \
        factory.h \
        factory.c \
        hash.h \
        hash.c \
        sprintf.h \
        sprintf.c \
        test.h \
        test.c
liblog4c_sd_la_LDFLAGS =

EXTRA_liblog4c_sd_la_SOURCES = \
        sprintf.osf.c

